# Computer-Graphics

./: README.md  计算机图形学笔记.md
GAMES101/: GAMES101_Note.md
GAMES101/Homework/: record.md
GAMES101/Homework/Assignment.1/Code/: CMakeLists.txt  main.cpp
GAMES101/Homework/Assignment.2/Code/: CMakeLists.txt  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp
GAMES101/Homework/Assignment.3/Code/: Shader.hpp  Texture.hpp  Thumbs.db  Triangle.hpp  main.cpp  rasterizer.cpp
GAMES101/Homework/Assignment.4/Code/: main.cpp
GAMES101/Homework/Assignment.5/Code/: Renderer.cpp  Triangle.hpp  binary.ppm  main.cpp
GAMES101/Homework/Assignment.6/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
GAMES101/Homework/Assignment.7/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  binary.ppm
